task1/test_results_defects/infer_test/st_cross_thread_access/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/st_cross_thread_access.c:395: error: Buffer Overrun L1
  Offset: 4 (⇐ 2 + 2) Size: 4.
  393. 
  394. 	    unsigned long ip = (unsigned long)pthread_self();
  395.         printf("Task5! Cross thread stack access, threadID# %lu! gbl5 = %d arrval = %d \n",ip ,st_cross_thread_access_005_glb_data,*(p[2]+2));
                                                                                                                                          ^
  396. 
  397. #endif /* defined(CHECKER_POLYSPACE) */

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/st_cross_thread_access.c:517: warning: Condition Always False
  Boolean condition  `(thread_set==1)` is always false at line 517, column 10.
  515. 	   intptr_t t1 = 10;
  516. 	   intptr_t t2 = 20;
  517. 	   if ( thread_set == CREATE_THREAD)
                ^
  518. 	   {
  519.            ;

Found 2 issues
                      Issue Type(ISSUED_TYPE_ID): #
  Condition Always False(CONDITION_ALWAYS_FALSE): 1
            Buffer Overrun L1(BUFFER_OVERRUN_L1): 1
